# mfmat

./: CMakeLists.txt  ClangToolchain.cmake  CommonToolchain.cmake  GNUToolchain.cmake  conanfile.py  configure.sh
conan/profiles/: fedora_clang  fedora_gcc  linux
include/mfmat/: cl_bind_helpers.hpp  cl_bind_helpers.ipp  cl_default_gpu_setter.hpp  cl_kernels_store.hpp  cl_mat.hpp  cl_mat.ipp  cl_mat_externals.hpp  common.hpp  common.ipp  ct_mat.hpp  ct_mat.ipp  ct_mat_externals.hpp  ct_mat_externals.ipp  ct_mat_qr_decomposition.hpp  ct_mat_qr_decomposition.ipp  ct_mat_qr_eigen.hpp  ct_mat_qr_eigen.ipp  ct_sequence_helpers.hpp  dense_matrix.hpp  dense_matrix.ipp  dense_matrix_externals.ipp  fwd.hpp  qr_decomposition.hpp  qr_decomposition.ipp  qr_eigen.hpp  qr_eigen.ipp
include/mfmat/util/: lz4_iostream.hpp  lz4_iostream.ipp  lz4_streambuf.hpp
src/: CMakeLists.txt  cl_default_gpu_setter.cpp  cl_kernels_store.cpp  cl_mat.cpp  cl_mat_externals.cpp  lz4_streambuf.cpp
src/cl_kernels/: matrix_add.cl  matrix_add_column.cl  matrix_add_row.cl  matrix_is_diagonal.cl  matrix_is_equal.cl  matrix_is_symmetric.cl  matrix_mean.cl  matrix_mean_center.cl  matrix_multiply.cl  matrix_orthonormalize.cl  matrix_scalar_add.cl  matrix_scalar_div.cl  matrix_scalar_mul.cl  matrix_scalar_sub.cl  matrix_self_multiply_regularized.cl  matrix_square_transpose.cl  matrix_stddev.cl  matrix_stddev_center.cl  matrix_sub.cl  matrix_sub_column.cl  matrix_sub_row.cl  matrix_transpose.cl  matrix_transpose_multiply.cl  prefix_double.cl  prefix_float.cl
unit-tests/: CMakeLists.txt  cl_compare_ops.cpp  cl_construction.cpp  cl_correlation.cpp  cl_covariance.cpp  cl_is_diagonal.cpp  cl_is_symmetric.cpp  cl_kernels_store_initialization.cpp  cl_matrices_ops.cpp  cl_mean.cpp  cl_mean_center.cpp  cl_multiply.cpp  cl_orthonormalization.cpp  cl_qr_decomposition.cpp  cl_qr_eigen.cpp  cl_scalar_ops.cpp  cl_standard_deviation.cpp  cl_stddev_center.cpp  cl_transpose.cpp  compare_ops.cpp  construction.cpp  copy_vector.cpp  correlation.cpp  covariance.cpp  ct_compare_ops.cpp  ct_construction.cpp  ct_copy_vector.cpp  ct_correlation.cpp  ct_covariance.cpp  ct_determinant.cpp  ct_dot_product.cpp  ct_getters.cpp  ct_is_diagonal.cpp  ct_is_symmetric.cpp  ct_matrices_ops.cpp  ct_mean.cpp  ct_mean_center.cpp  ct_multiply.cpp  ct_norm.cpp  ct_normalize.cpp  (+31 more)
